--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "lint": "eslint ./"
   },
   "dependencies": {
+    "backbone": "^1.3.3",
     "body-parser": "^1.9.2",
-    "express": "^4.10.1",
+    "express": "^4.15.4",
+    "mocha": "^2.5.3",
     "morgan": "^1.4.1",
     "mysql": "^2.4.2",
+    "nodemon": "^1.12.1",
     "request": "^2.69.0",
     "sequelize": "^3.21.0"
   },
