--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.4.1",
     "mysql": "^2.4.2",
     "nodemon": "^1.12.1",
+    "query-string": "^5.0.0",
     "request": "^2.69.0",
     "sequelize": "^3.21.0"
   },
