--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "lint": "eslint ./"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "backbone": "^1.3.3",
     "body-parser": "^1.9.2",
+    "bower": "^1.8.2",
     "express": "^4.15.4",
+    "jquery": "^3.2.1",
     "mocha": "^2.5.3",
     "morgan": "^1.4.1",
-    "mysql": "^2.4.2",
+    "mysql": "^2.14.1",
     "nodemon": "^1.12.1",
     "query-string": "^5.0.0",
     "request": "^2.69.0",
